--- a/e2e/android/app/src/main/res/layout/activity_masking_bench.xml
+++ b/e2e/android/app/src/main/res/layout/activity_masking_bench.xml
@@ -89,6 +89,28 @@
 				android:layout_height="wrap_content"
 				android:layout_weight="1"
 				android:text="Toast" />
+
+			<Space
+				android:layout_width="12dp"
+				android:layout_height="1dp" />
+
+			<Button
+				android:id="@+id/button_floating_popup"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_weight="1"
+				android:text="Floating Popup" />
+
+			<Space
+				android:layout_width="12dp"
+				android:layout_height="1dp" />
+
+			<Button
+				android:id="@+id/button_attached_dialog"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_weight="1"
+				android:text="Attached Dialog" />
 		</LinearLayout>
 
 		<TextView
