--- a/e2e/android/app/src/main/res/values/colors.xml
+++ b/e2e/android/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple_40">#FF6650A4</color>
+    <color name="identify_bg">#FF121D61</color>
+    <color name="identify_text">#FF8A9EFF</color>
+    <color name="danger_red">#FFFF0000</color>
 </resources>
